crates/strider-analyze/tests/snapshots/mips64be__calls__mutual_a.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x120000d88:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "11" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v18" [color="#888888", style=dashed];
  "v18" -> "16" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v19" [color="#888888", style=dashed];
  "v19" -> "16" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "17" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v24" [color="#888888", style=dashed];
  "v24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "29" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "6" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
